That's workin so far, we're missing GitHub webhook support and a Dockerization