@@ -1,7 +1,17 @@
-/*
- * To change this license header, choose License Headers in Project Properties.
- * To change this template file, choose Tools | Templates
- * and open the template in the editor.
+/* 
+ * Copyright 2019 Michael Büchner, Deutsche Digitale Bibliothek
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 package de.ddb.labs.iiif.presentation;
 
@@ -9,29 +19,37 @@ package de.ddb.labs.iiif.presentation;
  *
  * @author Michael Büchner <m.buechner@dnb.de>
  */
-import com.fasterxml.jackson.annotation.JsonRootName;
+import com.fasterxml.jackson.annotation.JsonIgnore;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
 import io.javalin.Javalin;
 import io.javalin.plugin.rendering.vue.VueComponent;
 import io.javalin.http.staticfiles.Location;
 import io.javalin.plugin.json.JavalinJackson;
-import io.javalin.plugin.openapi.jackson.JacksonToJsonMapper;
+import io.javalin.plugin.openapi.annotations.ContentType;
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.FileSystems;
 import java.nio.file.Files;
+import java.nio.file.LinkOption;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.file.PathMatcher;
 import java.util.ArrayList;
 import static java.util.Collections.singleton;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.CompletableFuture;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
+import org.apache.commons.io.FileUtils;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.text.StringEscapeUtils;
 import org.eclipse.jgit.api.Git;
 import org.eclipse.jgit.api.errors.GitAPIException;
 import org.eclipse.jgit.errors.IncorrectObjectTypeException;
 import org.eclipse.jgit.lib.ObjectId;
 import org.eclipse.jgit.lib.Ref;
-import org.eclipse.jgit.util.FileUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -41,6 +59,7 @@ public class App {
     private Path folder;
     private Git git;
     private ObjectId oIdOfLastCommit;
+    private ObjectMapper mapper = new ObjectMapper();
 
     public App() {
         try {
@@ -69,18 +88,19 @@ public class App {
             System.exit(-1);
         }
         // make local folder
-        try {
-            folder = Files.createTempDirectory("iiif-image-git");
-        } catch (IOException ex) {
-            LOG.warn(ex.getMessage());
-            folder = Paths.get("tmp/");
-        }
+//        try {
+        folder = Path.of("d:\\GitHub\\ddblabs-iiif-presentation-files\\");
+//            folder = Files.createTempDirectory("iiif-image-git");
+//        } catch (IOException ex) {
+//            LOG.warn(ex.getMessage());
+//            folder = Paths.get("tmp/");
+//        }
         // clone repro
-        try {
-            clone(folder);
-        } catch (IOException | GitAPIException ex) {
-            LOG.error(ex.getMessage(), ex);
-        }
+//        try {
+//            clone(folder);
+//        } catch (IOException | GitAPIException ex) {
+//            LOG.error(ex.getMessage(), ex);
+//        }
     }
 
     public static void main(String[] args) {
@@ -95,10 +115,10 @@ public class App {
     private void start() throws Exception {
 
         final String files = folder.toString() + File.separator + Configuration.get().getValue("iiif-presentation.folder");
-       
+
         JavalinJackson.getObjectMapper().enable(SerializationFeature.INDENT_OUTPUT);
         JavalinJackson.getObjectMapper().enable(SerializationFeature.ORDER_MAP_ENTRIES_BY_KEYS);
-        
+
         final Javalin app = Javalin.create(config -> {
             config.enableCorsForAllOrigins();
             config.autogenerateEtags = true;
@@ -116,7 +136,7 @@ public class App {
                 if (git != null) {
                     git.close();
                 }
-                FileUtils.delete(folder.toFile(), FileUtils.RECURSIVE);
+                FileUtils.deleteQuietly(folder.toFile());
             });
 
         });
@@ -126,19 +146,83 @@ public class App {
             ctx.res.setCharacterEncoding("UTF-8");
         });
 
-        app.get("/api/files", ctx -> {
-            final List<String> fileNames = Files.list(folder)
-                    .map(Path::getFileName)
-                    .map(Path::toString)
-                    .collect(Collectors.toList());
-            List<IiifFile> f = new ArrayList<>();
-            for (String fileName : fileNames) {
-                f.add(new IiifFile(fileName));
+        app.get("/api/file", ctx -> {
+
+            String f = ctx.queryParam("f", "");
+            if (f != null && !f.isEmpty()) {
+                f = f.replaceAll("\\.\\." + StringEscapeUtils.escapeJava(File.separator) + "|\\.\\./", "");
+                f = StringUtils.strip(f, File.separator + "/");
+                f += File.separator;
             }
-            ctx.json(f);
+
+            final Path file = Path.of(folder.toString() + File.separator + f);
+
+            final CompletableFuture<String> future = CompletableFuture.supplyAsync(() -> {
+                try {
+                    final JsonNode rootNode = mapper.readTree(file.toFile());
+                    return mapper.writerWithDefaultPrettyPrinter().writeValueAsString(rootNode);
+                } catch (IOException ex) {
+                    return String.format("{\"error\":\"500\",\"message\": \"%s\"}", StringEscapeUtils.escapeJson(ex.getMessage()));
+                }
+            });
+            ctx.status(200).contentType(ContentType.JSON).result(future);
         });
 
-        app.get("/files", new VueComponent("<file-overview></file-overview>"));
+        app.get("/api/browse", ctx -> {
+
+            String d = ctx.queryParam("d", "");
+            if (d != null && !d.isEmpty()) {
+                d = StringUtils.endsWith(d, "\\/") ? d : d + File.separator;
+                d = d.replaceAll("\\.\\." + StringEscapeUtils.escapeJava(File.separator) + "|\\.\\./", "");
+                d = StringUtils.strip(d, File.separator + "/");
+                d += File.separator;
+            }
+
+            // only serve files with *.json ending
+            final Path b = Path.of(folder.toString() + File.separator + d);
+            final PathMatcher jsonMatcher = FileSystems.getDefault().getPathMatcher("glob:*.json");
+            Path localFolder = folder;
+
+            if (Files.exists(b, LinkOption.NOFOLLOW_LINKS)
+                    && Files.isDirectory(b, LinkOption.NOFOLLOW_LINKS)
+                    && Files.isReadable(b)) {
+
+                localFolder = b;
+            }
+
+            //final PathMatcher filter = folder.getFileSystem().getPathMatcher("glob:*" + f);
+            final Predicate<Path> isDirectory = e -> Files.isDirectory(e, LinkOption.NOFOLLOW_LINKS);
+            final Predicate<Path> isHidden = e -> {
+                try {
+                    return Files.isHidden(e);
+                } catch (IOException ex) {
+                    return true;
+                }
+            };
+            final Predicate<Path> endsWithJson = e -> jsonMatcher.matches(e.getFileName());
+
+            final Predicate<Path> filterGit = e -> {
+                return e.getFileName().toString().equals(".git");
+            };
+
+            final List<Path> filePathes = Files.list(localFolder)
+                    //.map(Path::getName)
+                    //.map(Path::toString)
+                    .filter(filterGit.negate())
+                    .filter(isHidden.negate())
+                    .filter(endsWithJson.or(isDirectory))
+                    .sorted()
+                    .collect(Collectors.toList());
+
+            final List<IiifFile> fles = new ArrayList<>();
+            for (Path filePath : filePathes) {
+                fles.add(new IiifFile(filePath));
+            }
+            ctx.json(fles);
+
+        });
+
+        app.get("/browse", new VueComponent("<file-overview></file-overview>"));
         app.get("/messages/:user", new VueComponent("<thread-view></thread-view>"));
 
         app.start(80);
@@ -180,39 +264,55 @@ public class App {
 
     public class IiifFile {
 
-        private String id;
-        private String name;
+        private Path name;
 
-        public IiifFile(String name) {
+        public IiifFile(Path name) {
             this.name = name;
-            this.id = "";
         }
 
         /**
          * @return the id
          */
-        public String getId() {
-            return id;
-        }
-
-        /**
-         * @param id the id to set
-         */
-        public void setId(String id) {
-            this.id = id;
+        public int getId() {
+            return name.hashCode() & 0xfffffff;
         }
 
         /**
          * @return the name
          */
-        public String getName() {
+        @JsonIgnore
+        public Path getName() {
             return name;
+        }
+
+        /**
+         * @return the name
+         */
+        public String getFilename() {
+
+            return name.getFileName().toString();
+        }
+
+        public String getFilenameWithPath() {
+            return StringUtils.strip(name.toString().replace(folder.toString(), ""), "\\/");
+        }
+
+        public String getPath() {
+            return StringUtils.strip(getFilenameWithPath().replace(getFilename(), ""), "\\/");
+        }
+
+        public String getType() {
+            return (Files.isDirectory(name, LinkOption.NOFOLLOW_LINKS)) ? "directory" : "file";
+        }
+
+        public long getSize() {
+            return name.toFile().length();
         }
 
         /**
          * @param name the name to set
          */
-        public void setName(String name) {
+        public void setName(Path name) {
             this.name = name;
         }
     }
